[project]
name = "where2now"
version = "0.1.0"
description = "REST API for constrained delivery routing (MIP/LP + Google Maps)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "SQLAlchemy>=2.0.46",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "fastapi-health>=0.4.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
